RESOLVED FIXED20176
querySelectorAll id optimization no longer working
https://bugs.webkit.org/show_bug.cgi?id=20176
Summary querySelectorAll id optimization no longer working
David Smith
Reported 2008-07-25 17:00:02 PDT
Regresses the time for the #speech5 test on webkit.org/perf/slickspeed from 1-3ms to 10-12+ ms.
Attachments
Patch; Passes run-webkit-tests and doesn't regress http://ejohn.org/apps/selectortest/#target (2.40 KB, patch)
2008-07-25 17:06 PDT, David Smith
sam: review-
patch (12.22 KB, patch)
2008-07-27 14:55 PDT, Sam Weinig
oliver: review+
David Smith
Comment 1 2008-07-25 17:06:07 PDT
Created attachment 22488 [details] Patch; Passes run-webkit-tests and doesn't regress http://ejohn.org/apps/selectortest/#target
Eric Seidel (no email)
Comment 2 2008-07-26 22:41:41 PDT
Comment on attachment 22488 [details] Patch; Passes run-webkit-tests and doesn't regress http://ejohn.org/apps/selectortest/#target Looks good.
Sam Weinig
Comment 3 2008-07-26 22:51:03 PDT
Comment on attachment 22488 [details] Patch; Passes run-webkit-tests and doesn't regress http://ejohn.org/apps/selectortest/#target The check shouldn't be necessary, and can be made an ASSERT as far as I can tell. It should also read querySelector->m_attr== idAttr, not querySelector->m_attr.localName() == idAttr. I believe this will also break some uses of querySelector("#camalCase"); in quirks mode. We probably need to disable the optimization in quirks mode methinks.
Sam Weinig
Comment 4 2008-07-27 14:55:26 PDT
Sam Weinig
Comment 5 2008-07-27 15:06:39 PDT
Fixed in r35406.
Note You need to log in before you can comment on or make changes to this bug.