WebCore:

2008-07-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=20176
        querySelectorAll id optimization no longer working

        Turn the querySelector/querySelectorAll id optimization back on
        for only strict and almost strict mode.  In quirks mode, the optimiztion
        won't work as the id match is not case sensitive.

        Tests: fast/dom/SelectorAPI/caseID-almost-strict.html
               fast/dom/SelectorAPI/caseID-strict.html
               fast/dom/SelectorAPI/caseID.html

        * dom/Node.cpp:
        (WebCore::Node::querySelector):
        (WebCore::Node::querySelectorAll):
        * dom/SelectorNodeList.cpp:
        (WebCore::createSelectorNodeList):
        * dom/SelectorNodeList.h:

LayoutTests:

2008-07-27  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Tests for https://bugs.webkit.org/show_bug.cgi?id=20176
        querySelectorAll id optimization no longer working

        * fast/dom/SelectorAPI/caseID-almost-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/caseID-almost-strict.html: Added.
        * fast/dom/SelectorAPI/caseID-expected.txt: Added.
        * fast/dom/SelectorAPI/caseID-strict-expected.txt: Added.
        * fast/dom/SelectorAPI/caseID-strict.html: Added.
        * fast/dom/SelectorAPI/caseID.html: Added.



Canonical link: https://commits.webkit.org/27832@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35406 268f45cc-cd09-0410-ab3c-d52691b4dbfc